[package]
name = "curie"
version = "0.0.7"
authors = ["Bruce Mitchener <bruce.mitchener@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "CURIE or Compact URIs as used in JSON-LD, RDF, SPARQL, XML and other applications. This manages mapping prefixes to URIs or IRIs as well as expanding CURIEs to the complete URI form."
keywords = ["curie", "qname", "prefix", "uri"]
documentation = "https://docs.rs/curie/"
homepage = "https://github.com/endoli/curie.rs"
repository = "https://github.com/endoli/curie.rs"

[dependencies]
