[package]
name = "curie"
version = "0.1.3"
authors = ["Bruce Mitchener <bruce.mitchener@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "CURIE or Compact URIs as used in JSON-LD, RDF, SPARQL, XML and other applications. This manages mapping prefixes to URIs or IRIs as well as expanding CURIEs to the complete URI form."
keywords = ["curie", "qname", "prefix", "uri", "rdf"]
documentation = "https://docs.rs/curie/"
homepage = "https://github.com/endoli/curie.rs"
repository = "https://github.com/endoli/curie.rs"
edition = "2021"

[dependencies]
indexmap = "2"
